--- a/environment.yml
+++ b/environment.yml
@@ -1,23 +1,124 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
+_nb_ext_conf=0.4.0=py36_1
+anaconda-client=1.6.14=py36_0
+asn1crypto=0.24.0=py36_0
+backcall=0.1.0=py36_0
 blas=1.0=mkl
+bleach=2.1.3=py36_0
+boto=2.48.0=py36_1
+boto3=1.7.45=py36_0
+botocore=1.10.45=py36_0
+ca-certificates=2018.03.07=0
 certifi=2018.4.16=py36_0
 cffi=1.11.5=py36h945400d_0
+chardet=3.0.4=py36h420ce6e_1
+clyent=1.2.2=py36hb10d595_1
+colorama=0.3.9=py36h029ae33_0
+cryptography=2.2.2=py36hfa6e2cd_0
 cuda91=1.0=0
+cymem=1.31.2=py36h51d26f2_0
+cytoolz=0.8.2=py36h547e66e_0
+decorator=4.3.0=py36_0
+dill=0.2.8.2=py36_0
+docutils=0.14=py36h6012d8f_0
+entrypoints=0.2.3=py36hfd66bb0_2
+ftfy=4.4.3=py36hb6b3982_0
+gensim=3.4.0=py36h452e1ab_0
+html5lib=1.0.1=py36h047fa9f_0
 icc_rt=2017.0.4=h97af966_0
+idna=2.7=py36_0
 intel-openmp=2018.0.3=0
+ipykernel=4.8.2=py36_0
+ipython=6.4.0=py36_0
+ipython_genutils=0.2.0=py36h3c5d0ee_0
+ipywidgets=7.2.1=py36_0
+jedi=0.12.0=py36_1
+jinja2=2.10=py36h292fed1_0
+jmespath=0.9.3=py36_0
+jsonschema=2.6.0=py36h7636477_0
+jupyter_client=5.2.3=py36_0
+jupyter_core=4.4.0=py36h56e9d50_0
+libiconv=1.15=h1df5818_7
+libsodium=1.0.16=h9d3ae62_0
+libxml2=2.9.8=hadb2253_1
+libxslt=1.1.32=hf6f1972_0
+lxml=4.2.2=py36hef2cd61_0
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+markupsafe=1.0=py36h0e26971_1
+mistune=0.8.3=py36hfa6e2cd_1
 mkl=2018.0.3=1
 mkl_fft=1.0.1=py36h452e1ab_0
 mkl_random=1.0.1=py36h9258bd6_0
+msgpack-numpy=0.4.1=py36h93564ae_0
+msgpack-python=0.4.8=py36h58b1e9d_0
+msys2-conda-epoch=20160418=1
+murmurhash=0.28.0=py36h866ba4d_0
+nb_anacondacloud=1.4.0=py36_0
+nb_conda=2.2.0=py36_0
+nb_conda_kernels=2.1.0=py36_0
+nbconvert=5.3.1=py36h8dc0fde_0
+nbformat=4.4.0=py36h3a5bc1b_0
+nbpresent=3.0.2=py36_0
+notebook=5.5.0=py36_0
 numpy=1.14.5=py36h9fa60d3_3
 numpy-base=1.14.5=py36h5c71026_3
+openssl=1.0.2o=h8ea7d77_0
+pandoc=2.2.1=h1a437c5_0
+pandocfilters=1.4.2=py36h3ef6317_1
+parso=0.2.1=py36_0
+pickleshare=0.7.4=py36h9de030f_0
 pip=10.0.1=py36_0
+plac=0.9.6=py36_0
+preshed=1.0.0=py36h065ec1e_0
+prompt_toolkit=1.0.15=py36h60b8f86_0
 pycparser=2.18=py36hd053e01_1
+pygments=2.2.0=py36hb010967_0
+pyopenssl=18.0.0=py36_0
+pyreadline=2.1=py36h094d952_1
+pysocks=1.6.8=py36_0
 python=3.6.6=hea74fb7_0
+python-dateutil=2.7.3=py36_0
 pytorch=0.4.0=py36_cuda91_cudnn7he774522_1
+pytz=2018.5=py36_0
+pywinpty=0.5.4=py36_0
+pyyaml=3.12=py36h1d1928f_1
+pyzmq=17.0.0=py36hfa6e2cd_1
+regex=2017.11.09=py36ha090894_0
+requests=2.19.1=py36_0
+s3transfer=0.1.13=py36_0
+scipy=1.1.0=py36h672f292_0
+send2trash=1.5.0=py36_0
 setuptools=39.2.0=py36_0
-vc=14=h0510ff6_3
-vs2015_runtime=14.0.25123=3
+simplegeneric=0.8.1=py36_2
+six=1.11.0=py36h4db2310_1
+smart_open=1.6.0=py36_0
+spacy=2.0.11=py36h8300f20_0
+termcolor=1.1.0=py36_1
+terminado=0.8.1=py36_1
+testpath=0.3.1=py36h2698cfe_0
+thinc=6.10.2=py36h830ac7b_0
+toolz=0.9.0=py36_0
+tornado=5.0.2=py36_0
+tqdm=4.23.4=py36_0
+traitlets=4.3.2=py36h096827d_0
+ujson=1.35=py36_0
+urllib3=1.23=py36_0
+vc=14.1=h0510ff6_3
+vs2015_runtime=15.5.2=3
+wcwidth=0.1.7=py36h3d5aa90_0
+webencodings=0.5.1=py36h67c50ae_1
 wheel=0.31.1=py36_0
+widgetsnbextension=3.2.1=py36_0
+win_inet_pton=1.0.1=py36he67d7fd_1
 wincertstore=0.2=py36h7fe50ca_0
+winpty=0.4.3=4
+wrapt=1.10.11=py36hfa6e2cd_2
+yaml=0.1.7=hc54c509_2
+zeromq=4.2.5=he025d50_1
+zlib=1.2.11=h8395fce_2
