--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cffi==1.11.5
 chardet==3.0.4
 clyent==1.2.2
 colorama==0.3.9
-cryptography==2.2.2
+cryptography>2.3
 cymem==1.31.2
 cytoolz==0.8.2
 decorator==4.3.0
