--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ nb-conda-kernels==2.1.0
 nbconvert==5.3.1
 nbformat==4.4.0
 nbpresent==3.0.2
-notebook==5.5.0
+notebook>=5.7.2
 numpy==1.14.5
 pandocfilters==1.4.2
 parso==0.2.1
