--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,5 @@
-anaconda-client==1.2.2
-asn1crypto==0.24.0
-backcall==0.1.0
-bleach==3.3.0
-boto==2.48.0
-boto3==1.7.45
-botocore==1.10.45
-certifi==2018.4.16
-cffi==1.11.5
-chardet==3.0.4
-clyent==1.2.2
-colorama==0.3.9
-cryptography>2.3
-cymem==1.31.2
-cytoolz==0.8.2
-decorator==4.3.0
-dill==0.2.8.2
-docutils==0.14
-entrypoints==0.2.3
-ftfy==4.4.3
-gensim==3.4.0
-html5lib==1.0.1
-idna==2.7
-ipykernel==4.8.2
-ipython==6.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.2.1
-jedi==0.12.0
-Jinja2==2.11.3
-jmespath==0.9.3
-jsonschema==2.6.0
-jupyter-client==5.2.3
-jupyter-core==4.4.0
-lxml==4.6.3
-MarkupSafe==1.0
-mistune==0.8.3
-mkl-fft==1.0.0
-mkl-random==1.0.1
-msgpack-numpy==0.4.1
-msgpack-python==0.4.8
-murmurhash==0.28.0
-nb-anacondacloud==1.4.0
-nb-conda==2.2.0
-nb-conda-kernels==2.1.0
-nbconvert==5.3.1
-nbformat==4.4.0
-nbpresent==3.0.2
-notebook>=5.7.2
-numpy==1.14.5
-pandocfilters==1.4.2
-parso==0.2.1
-pickleshare==0.7.4
-plac==0.9.6
-preshed==1.0.0
-prompt-toolkit==1.0.15
-pycparser==2.18
-Pygments==2.2.0
-pyOpenSSL==18.0.0
-pyreadline==2.1
-PySocks==1.6.8
-python-dateutil==2.7.3
-pytz==2018.5
-pywinpty==0.5.4
-pyyaml>=4.2b1
-pyzmq==17.0.0
-regex==2017.11.9
-requests==2.19.1
-s3transfer==0.1.13
-scipy==1.1.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
-smart-open==1.6.0
-spacy==2.0.11
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.3.1
-thinc==6.10.2
-toolz==0.9.0
-torch==0.4.0
-torchtext==0.2.3
-tornado==5.0.2
-tqdm==4.23.4
-traitlets==4.3.2
-ujson==1.35
-urllib3==1.24.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.2.1
-win-inet-pton==1.0.1
-wincertstore==0.2
-wrapt==1.10.11
+jupyter
+black
+isort
+pandas
+spacy
