--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-tactile
+# in _config.yml
+title: "My book title"
+# logo: images/logo.png
+execute:
+  execute_notebooks: "off"
